[tool.poetry]
name = "python_microsoft_todo"
version = "0.1.0"
description = ""
authors = ["Dan O'Sullivan <python@osull.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
pathvalidate = "^2.5.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
